# tree-ds

./: .gitignore  .project  CMakeLists.txt  DEBUG.md  Doxyfile  LICENSE  README.md  _clang-format  sonar-project.properties  sonar.sh
TreeDS/Debug/: TreeDS
TreeDS/doc/html/: annotated.html  classds_1_1node-members.html  classds_1_1temporary__node-members.html  classds_1_1tree.html  classds_1_1tree__base.html  classds_1_1tree__coll__graph.md5  classds_1_1tree__inherit__graph.dot  classds_1_1tree__iterator-members.html  classds_1_1tree__iterator__coll__graph.md5  classds_1_1tree__iterator__inherit__graph.dot  dir_b6e2133793579e714c9c9330949462e4.html  dir_c155de92d0cd23d6b7fca8ca69a47fe7.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_0.md5  inherit_graph_1.md5  (+6 more)
TreeDS/test/: treeStructures.hpp
doc/html/: classds_1_1node.html  classds_1_1node__inherit__graph.dot  classds_1_1node__inherit__graph.md5  classds_1_1pre__order-members.html  classds_1_1pre__order.html  classds_1_1temporary__node.html  classds_1_1temporary__node__coll__graph.md5  classds_1_1temporary__node__inherit__graph.dot  classds_1_1tree-members.html  classds_1_1tree__base-members.html  classds_1_1tree__base__inherit__graph.dot  classds_1_1tree__base__inherit__graph.md5  classds_1_1tree__iterator.html  classes.html  files.html  inherit_graph_1.dot  inherit_graph_2.dot  inherit_graph_2.md5  inherit_graph_3.dot  node_8hpp_source.html  temporary__node_8hpp_source.html  tree_8hpp_source.html  tree__base_8hpp_source.html
doc/latex/: classds_1_1node.tex  classds_1_1node.tex.tmp  classds_1_1node__inherit__graph.dot  classds_1_1node__inherit__graph.md5  classds_1_1temporary__node__coll__graph.md5  classds_1_1temporary__node__inherit__graph.dot  classds_1_1tree.tex  classds_1_1tree__base__inherit__graph.md5  classds_1_1tree__inherit__graph.md5  classds_1_1tree__iterator.tex  hierarchy.tex
html/: annotated.html  classds_1_1in__order-members.html  classds_1_1in__order.html  classds_1_1node-members.html  classds_1_1node.html  classds_1_1post__order-members.html  classds_1_1post__order.html  classds_1_1pre__order-members.html  classds_1_1pre__order.html  classds_1_1temporary__node-members.html  classds_1_1temporary__node.html  classds_1_1tree-members.html  classds_1_1tree.html  classds_1_1tree__base-members.html  classds_1_1tree__base.html  classds_1_1tree__iterator-members.html  classds_1_1tree__iterator.html  classes.html  dir_3a7ada9f367af6632b4acb6fc2d2bb33.html  dir_724c1cd06b4c79d48697fe3c319d5b87.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  helper_8hpp_source.html  hierarchy.html  in__order_8hpp_source.html  index.html  node_8hpp_source.html  post__order_8hpp_source.html  pre__order_8hpp_source.html  std__implementations_8hpp_source.html  structstd_1_1hash_3_01ds_1_1tree_3_01T_00_01Alg_00_01Alloc_01_4_01_4.html  temporary__node_8hpp_source.html  tree_8hpp_source.html  tree__base_8hpp_source.html  tree__iterator_8hpp_source.html
include/TreeDS/: advanced_pointer.hpp  allocator_utility.hpp  basic_tree.hpp  binary_node.hpp  binary_tree  binary_tree.hpp  binary_tree_view.hpp  match  nary_node.hpp  nary_tree  nary_tree.hpp  nary_tree_view.hpp  node.hpp  std_implementations.hpp  struct_node.hpp  temp_node.hpp  temporary_node.hpp  tree  tree.hpp  tree.tpp  tree_base.hpp  tree_iterator.hpp  tree_iterator_filter.hpp  tree_view.hpp  utility.hpp  view
src/: tree.hpp  tree.tpp  tree_base.hpp  tree_base.tpp
src/iterator/: algorithm.hpp  visitor.hpp  visitor.tpp
src/node/: node.hpp  node.tpp
test/: AdvancedPointerTest.cpp  AllocationTest.cpp  BinaryNodeTest.cpp  BreadthFirstTest.cpp  DebugTest.cpp  GenerativeNavigatorTest.cpp  IsUpdateableTest.cpp  IteratorChangePolicyTest.cpp  IteratorCompatibilityTest.cpp  IteratorTest.cpp  MatcherTest.cpp  MultipleNodePointerTest.cpp  NaryNodeTest.cpp  NaryTreeIterationTest.cpp  NaryTreeViewIterationTest.cpp  NaryTreeViewTest.cpp  NodeNavigatorTest.cpp  PatternSimpleTest.cpp  PatternTest.cpp  PatternTest2.cpp  PatternTypesTest.cpp  PreliminaryTest.cpp  ReadmeTest.cpp  StructNodeTest.cpp  TreeIterationTest.cpp  TreeTest.cpp  TreeViewIterationTest.cpp  TreeViewTest.cpp  Types.hpp  UtilityTest.cpp  checkFunctions.hpp  main.cpp  treeStructures.hpp
(+104 files in other folders)
